--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.data.mongodb.database=E_Vote_Database
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=256MB
+spring.servlet.multipart.enabled=true 
 
 #spring.data.mongodb.uri=mongodb://@localhost:27017/test_db
